# Medi-Buddy

./: .gitignore  README.md  datatable_Query  postgre.ipynb  requirements.txt
host/: bev_inference.py
ros2_ws/src/: 1  cyclonedds.xml  hailo_visu_30_infer.py  hailo_visualization.py  hailo_visualization_30.py  new_hailo_infer.py
ros2_ws/src/ai_inference/: new.onnx  package.xml  setup.cfg  setup.py
ros2_ws/src/ai_inference/ai_inference/: bev_buffer_node.py  bev_creator_node.py  future_animation.py  future_visualization.launch.py  hailo_future_predictor_node.py  heatmap_bias_node.py  mega_node.py  mega_node_ori.py  onnx_future_predictor_node.py  onnx_future_predictor_node_original.py  riskmap_markerarray.py  riskmap_to_occupancy.py
ros2_ws/src/ai_inference/launch/: mega_future_nav.launch.py
ros2_ws/src/ai_inference_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/ai_inference_cpp/src/: heatmap_bias_node.cpp
ros2_ws/src/app/: setup.py
ros2_ws/src/bringup/: setup.py
ros2_ws/src/bringup/launch/: bringup.launch.py
ros2_ws/src/calibration/: setup.py
ros2_ws/src/driver/controller/: setup.py
ros2_ws/src/driver/ros_robot_controller/: setup.py
ros2_ws/src/driver/sdk/: setup.py
ros2_ws/src/dwb_omega_critic/: CMakeLists.txt  package.xml  pluginlib.xml
ros2_ws/src/dwb_omega_critic/include/dwb_omega_critic/: omega_direction_critic.hpp
ros2_ws/src/dwb_omega_critic/src/: omega_direction_critic.cpp
ros2_ws/src/example/: setup.py
ros2_ws/src/hailo/: package.xml  setup.py  shm_reader.py  test_reader.py
ros2_ws/src/hailo/hailo/: bev_buffer.py  bev_creator.py  bev_reciever.py
ros2_ws/src/hailo/launch/: mega_future_nav.launch.py
ros2_ws/src/hospital_robot_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/hospital_robot_pkg/hospital_robot_pkg/: rag_server_node.py
ros2_ws/src/interfaces/: CMakeLists.txt
ros2_ws/src/interfaces/msg/: DestinationRequest.msg  NavEvent.msg
ros2_ws/src/medi_buddy_facedetection/: package.xml  setup.cfg  setup.py
ros2_ws/src/medi_buddy_facedetection/medi_buddy_facedetection/: detection_publisher.py  detection_subscriber.py
ros2_ws/src/medi_buddy_facedetection/medi_buddy_facedetection/modules/: face_detection.py
ros2_ws/src/medi_buddy_qrcode/: package.xml  setup.cfg  setup.py
ros2_ws/src/medi_buddy_qrcode/medi_buddy_qrcode/: qrcode_publisher.py
ros2_ws/src/medi_buddy_raspi/: package.xml  setup.cfg  setup.py
ros2_ws/src/medi_buddy_raspi/launch/: medi_buddy.launch.py
ros2_ws/src/medi_buddy_raspi/medi_buddy_raspi/: audio_publisher.py  audio_reciever.py  camera_publisher.py
ros2_ws/src/medi_buddy_voiceassistant/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/medi_buddy_voiceassistant/medi_buddy_voiceassistant/: message_router_node.py  rms_vad_publisher.py
ros2_ws/src/multi/: setup.py
ros2_ws/src/navigation/: setup.py
ros2_ws/src/navigation/config/: nav2_controller_dwb.yaml  nav2_params.yaml  poi_map.yaml
ros2_ws/src/navigation/launch/: yhk_semantic_nav.launch.py
ros2_ws/src/navigation/launch/include/: bringup.launch.py
ros2_ws/src/navigation/navigation/: (old)yhk_semantic_router_node.py  costmap_tuner.py  yhk_nav_event_listner.py  yhk_poi_saver_node.py  yhk_semantic_router_node.py  yhk_speech_to_text_node.py
ros2_ws/src/navigation/scripts/: 11.py  README.md  hospital_robot_main.py  po_nn.hef  po_nn3.hef  기존 프레임 드랍.py
ros2_ws/src/peripherals/: setup.py
ros2_ws/src/peripherals/peripherals/: joystick_control.py
ros2_ws/src/simulations/mentorpi_description/: setup.py
ros2_ws/src/slam/: setup.py
ros2_ws/src/slam/launch/: rtabmap_slam0.launch.py  yhk_rtabmap_slam.launch.py  yhk_rviz_rtabmap.launch.py  yhk_rviz_slam.launch.py  yhk_slam.launch.py
ros2_ws/src/slam/launch/include/: rtabmap.launch_ori.py
ros2_ws/src/slam/maps/: map_01.pgm  map_01.yaml  map_02.pgm  map_02.yaml  map_03.pgm  map_03.yaml  map_hj.pgm  map_hj.yaml  map_hk.pgm  map_hk.yaml  map_medibuddy.pgm  map_medibuddy.yaml
ros2_ws/src/yolov5_ros2/: setup.py
