<?xml version="1.0"?>
<package format="3">
  <name>dwb_omega_critic</name>
  <version>0.1.0</version>
  <description>Custom DWB Trajectory Critic using omega direction weights</description>

  <maintainer email="you@example.com">YourName</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>dwb_core</depend>
  <depend>pluginlib</depend>
  <depend>nav_2d_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <dwb_core plugin="${prefix}/pluginlib.xml"/>
  </export>
</package>